test/link/linkerscript-include.asm
SECTION "test", ROM0[42]
DB 1, 2, 3, 4, 5
